// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RiskLevel Renders elevated risk correctly. 1`] = `
<div>
  <span
    class="components-truncate components-text woocommerce-pill wcpay-pill__alert css-1g4vivm-View-Text-sx-Base em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    Elevated
  </span>
</div>
`;

exports[`RiskLevel Renders highest risk correctly. 1`] = `
<div>
  <span
    class="components-truncate components-text woocommerce-pill wcpay-pill__danger css-1g4vivm-View-Text-sx-Base em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    Highest
  </span>
</div>
`;

exports[`RiskLevel Renders normal risk correctly. 1`] = `
<div>
  <span
    class="components-truncate components-text woocommerce-pill wcpay-pill__success css-1g4vivm-View-Text-sx-Base em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    Normal
  </span>
</div>
`;

exports[`RiskLevel Renders not assessed risk correctly. 1`] = `
<div>
  <span
    class="components-truncate components-text woocommerce-pill wcpay-pill css-1g4vivm-View-Text-sx-Base em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    N/A
  </span>
</div>
`;
